# eegverse

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: leaderboard.yml
DATASETS/: CHBMIT_CARD.md
eegverse/: __init__.py  api.py
eegverse/bench/: baseline_seizure_cnn.py  erp_baseline_logreg.py  mi_baseline.py  sleep_baseline_cnn.py
eegverse/datasets/: chbmit.py  openneuro_erp.py  physionet_mi.py  sleep_edf.py
eegverse/utils/: splits.py
scripts/: convert_chbmit_to_bids.py  convert_openneuro_to_bids.py  convert_physionet_mi_to_bids.py  convert_sleep_edf_to_bids.py  fetch_chbmit.py  fetch_openneuro_ds000117.py  fetch_physionet_mi.py  fetch_sleep_edf.py  update_leaderboard.py
