[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eegverse"
version = "0.3.0"
description = "EEGVERSE: A Universe of Annotated EEG Data"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [{ name = "zahransa" }]  # <-- put your real name/email if you want
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "mne>=1.6",
  "mne-bids>=0.13",
  "scikit-learn",
  "pooch"
  # NOTE: torch and openneuro-py are moved to optional extras below.
]

# Optional extras so users can choose heavy deps
[project.optional-dependencies]
dl = ["torch"]                 # deep learning bits
openneuro = ["openneuro-py"]   # OpenNeuro downloader
dev = ["build", "twine", "pytest"]

# Nice-to-have metadata
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Medical Science Apps"
]

[project.urls]
Homepage = "https://github.com/zahransa/eegverse"
Repository = "https://github.com/zahransa/eegverse"
Issues = "https://github.com/zahransa/eegverse/issues"

# Tell setuptools what to package
[tool.setuptools.packages.find]
include = ["eegverse*"]

# Include non-code files inside the package if you add any later
[tool.setuptools]
include-package-data = true

