[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eegverse"
version = "0.3.0"
description = "EEGVERSE: A Universe of Annotated EEG Data"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [{ name = "zahransa" }]  # put your real name/email if you want
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "mne>=1.6",
  "mne-bids>=0.13",
  "scikit-learn",
  "pooch"
]

# ✅ classifiers belong under [project], not in optional-dependencies
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis"
]

[project.urls]
Homepage = "https://github.com/zahransa/eegverse"
Repository = "https://github.com/zahransa/eegverse"
Issues = "https://github.com/zahransa/eegverse/issues"

# ✅ extras are just dependency lists (PEP 508)
[project.optional-dependencies]
dl = ["torch"]
openneuro = ["openneuro-py"]
dev = ["build", "twine", "pytest"]

# Package discovery
[tool.setuptools.packages.find]
include = ["eegverse*"]

[tool.setuptools]
include-package-data = true
